# polycheck

./: LICENSE  README.md  cabal.project.freeze  polycheck.cabal
.github/workflows/: build.yml
Test/PolyCheck/: Empty.hs  TH.hs
Test/PolyCheck/TH/: Empty.hs  Predicate.hs  State.hs  TypeExp.hs
experiments/: Main.hs
tests/: Main.hs  StrictlyPositive.hs
